Made work with HTTPS